@@ -43,6 +43,15 @@
 				<option value="0">JHIDE</option>
 				<option value="1">JSHOW</option>
 			</field>
+		</fieldset>
+		<fieldset name="advanced" label="JGLOBAL_LIST_LAYOUT_OPTIONS">
+			<field name="show_pagination_limit" type="list"
+			label="JGLOBAL_DISPLAY_SELECT_LABEL"
+			description="JGLOBAL_DISPLAY_SELECT_DESC">
+				<option value="">JGLOBAL_USE_GLOBAL</option>
+				<option value="0">JHIDE</option>
+				<option value="1">JSHOW</option>
+			</field>
 			<field name="show_headings" type="list"
 				label="JGLOBAL_SHOW_HEADINGS_LABEL"
 				description="JGLOBAL_SHOW_HEADINGS_DESC" >
