@@ -1,3 +1,7 @@
+28-June-2011 Michael Babker Version 1.8 Changes
+# Joomla! 1.6.4 security fix
++ Added pagination to list layout
+
 22-June-2011 Michael Babker Version 1.8 Changes
 + Added JHtmlIcon helper for front end
 ~ Made consistent JEXEC checks
